--- a/package.json
+++ b/package.json
@@ -10,15 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-fs": "^2.20.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.27.2",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.13.1"
+    "react-native-screens": "^4.13.1",
+    "react-native-share": "^12.2.0",
+    "react-native-svg": "^15.13.0",
+    "realm": "^20.2.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -34,6 +44,7 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
